--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,5 @@
 PUB_MANAGER_URL=http://localhost:5050
 USER_MANAGER_URL=http://localhost:5051
+BI_MANAGER_URL=http://localhost:6969
 LINKEDIN_PROXY_URL=http://localhost:3050
 TWITTER_PROXY_URL=http://localhost:3060
