--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "node-schedule": "^2.1.1",
     "nodemon": "^2.0.22"
   }
